<resources>
    <string name="app_name" translatable="false">Lunch Buddies</string>
    <string name="logoDescription" translatable="false">LunchBuddies Logo</string>
    <string name="app_name_lunch" translatable="false">Lunch</string>
    <string name="app_name_buddies" translatable="false">Buddies</string>
    <string name="your_name">Your Name</string>
    <string name="start">Start</string>
    <string name="create_group">Create new lunch group</string>
    <string name="create_group_description"><![CDATA[Choose lunch options & invite buddies]]></string>
    <string name="join_group">Join existing group</string>
    <string name="join_group_description">Get together with your lunch buddies</string>
    <string name="join_group_enter_code">Enter 6 characters\' code</string>
    <string name="join_group_title">Join group</string>
</resources>
