<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context="com.nupli.mlf.lunchbuddies.StartActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

        <ImageView
                android:src="@drawable/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/logo"
                android:layout_marginTop="82dp"
                android:contentDescription="@string/logoDescription"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="@color/dark_grass_green"
                    android:text="@string/app_name_lunch"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="@color/dark_grass_green"
                    android:textStyle="bold"
                    android:text="@string/app_name_buddies"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginBottom="30dp">

        <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_rounded_left_background"
                app:hintTextAppearance="@style/TextInputEditTextHint"
                style="@style/TextInputEditTextHint">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/yourName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:hint="@string/your_name"
                    android:nextFocusUp="@id/yourName"
                    android:nextFocusLeft="@id/yourName"
                    style="@style/TextInputEditText"/>
        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/startButton"
                android:text="@string/start"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button_right_background"
                android:textColor="#ffffff"
                android:paddingLeft="@dimen/button_side_padding"
                android:paddingRight="@dimen/button_side_padding"
                style="@style/ButtonTxt"/>
    </LinearLayout>
</RelativeLayout>
