<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.nupli.mlf.lunchbuddies.CreateOrJoinActivity"
        android:orientation="vertical"
        android:padding="20dp"
        android:divider="@drawable/transparent_tall_divider"
        android:showDividers="middle">

    <RelativeLayout
            android:id="@+id/createGroup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/AppTheme.Tile">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

            <ImageView
                    android:src="@drawable/group_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/create_group"
                    style="@style/TileHeader"/>

            <TextView
                    style="@style/BodyTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/create_group_description"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/joinGroup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/AppTheme.Tile">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

            <ImageView
                    android:src="@drawable/group_join"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/join_group"
                    style="@style/TileHeader"/>

            <TextView
                    style="@style/BodyTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/join_group_description"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
